[package]
name = "rsworld"
version = "0.1.0"
authors = ["BiggieBoo18"]
edition = "2018"

license = "MIT"
description = "Rust-World is a WORLD(https://github.com/mmorise/World) wrapper for Rust. "
repository = "https://github.com/BiggieBoo18/Rust-WORLD"
readme = "README.md"
keywords = ["Rust-WORLD", "WORLD", "world", "vocoder"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rsworld-sys = "0.1.0"
